Bug#32175 Compile failure on FreeBSD with NDB