include/config-win.h
@@ -234,8 +234,6 @@ inline double rint(double nr)
   return (((c-nr) >= (nr-f)) ? f :c);
 }
 
-#define log2(x) (_logb(x))
-
 #ifdef _WIN64
 #define ulonglong2double(A) ((double) (ulonglong) (A))
 #define my_off_t2double(A)  ((double) (my_off_t) (A))
